# email-verification-in-django

./: .gitignore  Makefile  TODO  pyproject.toml  requirements.txt
apps/: admin.py  models.py  urls.py  views.py
apps/fixtures/: product.json  product.yaml
apps/migrations/: 0001_initial.py  0002_initial.py
root/: settings.py  urls.py
shared/: models.py
shared/utils/: send_to_email.py
templates/: base.html  index.html  product.html
templates/admin/: send_admin_message.html
templates/auth/: base.html  forgot-password.html  login.html  register.html  reset-password.html
templates/ecommerce-template-master/: category.html  index.html
templates/part/: navbar.html
templates/products/: product-detail.html  product-list.html
templates/site/: faq.html
users/: admin.py  forms.py  models.py  send_to_email.py  urls.py  views.py
users/fixtures/: users.yaml
users/migrations/: 0001_initial.py  0002_alter_user_managers.py  0002_settings_user_balance.py  0003_faq.py
